@@ -42,6 +42,8 @@ NS_LOG_COMPONENT_DEFINE ("UdpSocketImpl");
 
 namespace ns3 {
 
+NS_OBJECT_ENSURE_REGISTERED (UdpSocketImpl);
+
 static const uint32_t MAX_IPV4_UDP_DATAGRAM_SIZE = 65507;
 
 // Add attributes generic to all UdpSockets to base class UdpSocket
