@@ -64,6 +64,7 @@ class Packet;
 class Socket : public Object
 {
 public:
+  static TypeId GetTypeId (void);
 
   Socket (void);
   virtual ~Socket (void);
